<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2011 Jordan Thoms.
  
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent" 
              android:layout_height="fill_parent" 
>
<LinearLayout
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
     <TextView
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:gravity="left"
        android:text="@string/setup_wizard_top"
        android:layout_height="wrap_content" android:layout_width="fill_parent"/>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
  		android:layout_height="wrap_content">
     	<TextView
        android:paddingTop="10dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:gravity="left"
        android:text="@string/setup_wizard_username"
        android:layout_height="wrap_content" android:layout_width="wrap_content"/>
        <EditText
        	android:id="@+id/usernameSetupWizard"
        	android:layout_height="wrap_content" android:layout_width="fill_parent" />
  	</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
  		android:layout_height="wrap_content">
     	<TextView
        android:paddingTop="10dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:gravity="left"
        android:text="@string/setup_wizard_password"
        android:layout_height="wrap_content" android:layout_width="wrap_content"/>
        <EditText
        	android:id="@+id/passwordSetupWizard"
        	android:layout_height="wrap_content" android:layout_width="fill_parent" />
  	</LinearLayout>
	<Button
		android:id="@+id/setupWizardGoButton"
		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:text="@string/setup_wizard_go_button"
  	/>
	
</LinearLayout>
</ScrollView>
